# MetaV2

./: .gitignore  ANALYSIS_REPORT.md  API_DOCUMENTATION.md  Bloodline_Management_Redesign_Workbook.md  PROJECT_CONTEXT.md  README.md  f10_complete_lineage_relations.json  f10_lineage_relations.json  f10_tables_structure.json  generate_sample_excel.py  main.py  metadata.db  metadata.db.backup  metadata_example.json  modify_lineage_service.py  modify_table_lineage.py  pyproject.toml  requirements.txt  sample_new_tables.json  upgradeV3.md  血缘管理界面重新设计方案.md
backend/: __init__.py  app.db  app.py  check_db.py  reset_database.py
backend/api/: __init__.py  column_metadata_routes.py  config_routes.py  data_source_routes.py  lineage_routes.py  table_metadata_routes.py  upload_routes.py
backend/config/: settings.py
backend/core/: connection_factory.py  metadata_extractor.py
backend/models/: __init__.py  config.py  schemas.py
backend/services/: __init__.py  column_metadata_service.py  config_service.py  data_source_service.py  lineage_service.py  metadata_import_service.py  table_metadata_service.py
backend/utils/: file_processing_utils.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: column_lineage_template.md  sample_column_lineage.json  table_structure_template.json  table_structure_template.md
frontend/src/: App.css  App.jsx  global.css  index.css  main.jsx
frontend/src/components/: ColumnLineageConfig.jsx  ColumnLineageImport.jsx  (+4 more)
tests/: conftest.py  test_config.py  test_data_source.py  test_lineage.py
(+36 files in other folders)
