[project]
name = "metav2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cx-oracle==8.3.0",
    "elasticsearch==8.5.3",
    "fastapi==0.104.1",
    "networkx==3.1",
    "pandas==2.0.1",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pymongo==4.3.3",
    "python-multipart==0.0.6",
    "pyyaml==6.0.1",
    "sqlalchemy==2.0.19",
    "uvicorn==0.24.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
